test/types/records/init/generic/mismatch.good
mismatch.chpl:16: error: unresolved call 'A(int(64)).init=(type A(int(64)), A(real(64)))'
mismatch.chpl:1: note: candidates are: A.init=(type ThisType, other: ThisType)
